# 6id-sdk

./: .gitignore  README.md
docs/: CNAME  SPEC_v0.1.md  index.html  styles.css
python/: README.md  demo_agent.py  pyproject.toml
python/src/sixid/: __init__.py  client.py
python/tests/: test_sixid.py
typescript/: README.md
